<package>
  <name>fbsched</name>
  <version>0.1.0</version>
  <description>Orocos exercises.</description>
  <maintainer email="antoine.rennuit@lesbuilderscompanions.com">Antoine Rennuit</maintainer>

  <license>BSD</license>

  <url type="website">none</url>

  <author email="antoine.rennuit@lesbuilderscompanions.com">Antoine Rennuit</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend> 
  <build_depend>std_msgs</build_depend> 

  <run_depend>rtt</run_depend> 
  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 
  <run_depend>rtt_std_msgs</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
    </rtt_ros>
  </export>
</package>
