<package>
  <name>fbsched</name>
  <version>0.1.0</version>
  <description>Orocos exercises.</description>
  <maintainer email="antoine.rennuit@lesbuilderscompanions.com">Antoine Rennuit</maintainer>

  <license>BSD</license>

  <url type="website">none</url>

  <author email="antoine.rennuit@lesbuilderscompanions.com">Antoine Rennuit</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend> 
  <run_depend>rtt</run_depend>

  <export>
  </export>
</package>
